# yama-bruh

./: .gitignore  Cargo.toml  DRUM_ENGINE_PLAN.md  README.md  UI_HANDOFF.md  build.sh  deploy.json
.claude/: launch.json
.github/workflows/: deploy.yml
Sources/YamaBruh/: Ringtone.swift
Tests/YamaBruhTests/: RingtoneTests.swift
app/: Products.storekit  project.yml
app/Shared/: DSPKernel.swift  PresetBank.swift  Theme.swift
app/YamaBruh/: App.swift  ContentView.swift  Info.plist  YamaBruh.entitlements
app/YamaBruh/Assets.xcassets/AccentColor.colorset/: Contents.json
app/YamaBruh/Audio/: AudioEngine.swift  ToneExporter.swift
app/YamaBruh/Banks/: ambient.json  pss170.json
app/YamaBruh/Models/: PresetBankManager.swift  StoreManager.swift  ToneStore.swift
app/YamaBruh/Views/: PresetBrowserView.swift  PresetEditorView.swift  ToneGeneratorView.swift  ToneListView.swift
app/YamaBruh/Views/Components/: LEDDisplayView.swift  WaveformView.swift
app/YamaBruhAUv3/: AUViewController.swift  Info.plist  YamaBruhAUv3.entitlements  YamaBruhAudioUnit.swift
src/: enginetest.rs  lib.rs  miditest.rs  native.rs  sinetest.rs
www/: app.js  drum-worklet.js  drums.js  index.html  midi.js  ringtones.html  simplym.html  style.css  synth-worklet.js  synth.js  yama_bruh.wasm  yamabruh-notify.js  ymwave.html
